2003-06-02  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	* Added new file gtksourceview/gtksourceprintjob.c

2003-05-31  Christian Neumair  <chris@gnome-de.org>

	* de.po: Added German translation.

2003-05-31  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

2003-05-30  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

2003-05-29  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

2003-05-28  Pablo Gonzalo del Campo  <pablodc@bigfoot.com>

        * es.po: Added Spanish translation by
                 Francisco Javier Fernandez <serrador@arrakis.es>.

2003-05-27  Dmitry G. Mastrukov  <dmitry@taurussoft.org>

	* ru.po: Added Russian translation
	from Russian team <gnome-cyr@gnome.org>.

2003-05-26  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

2003-05-26  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	* POTFILES.in: Added the rest of the .lang files in
	gtksourceview/language-specs.
	
2003-05-26  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	* es.po: Translated c.lang strings to test .lang file i18n.
	* POTFILES.in: Added gtksourceview/language-specs/c.lang.

2003-05-25  Duarte Loreto <happyguy_pt@hotmail.com>

        * pt.po: Add new Portuguese translation.

2003-05-22  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Added Czech translation.

=== gtksourceview 0.2.1 ===
	
2003-05-20  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

2003-05-19  Christian Rose  <menthos@menthos.com>

	* sv.po: Added Swedish translation.
