@@ -1,8 +1,9 @@
-gtksourceview/gtksourceview.c
 gtksourceview/gtksourcebuffer.c
 gtksourceview/gtksourcelanguagesmanager.c
-gtksourceview/gtksourcestylescheme.c
 gtksourceview/gtksourceprint.c
+gtksourceview/gtksourceprintjob.c
+gtksourceview/gtksourcestylescheme.c
+gtksourceview/gtksourceview.c
 gtksourceview/language-specs/ada.lang
 gtksourceview/language-specs/c.lang
 gtksourceview/language-specs/cpp.lang
