@@ -1,3 +1,7 @@
+2003-06-04  Abel Cheung  <maddog@linux.org.hk>
+
+	* POTFILES.in: Added gtksourceview/gtksourceprintjob.c
+
 2003-06-02  Gustavo Giraldez  <gustavo.giraldez@gmx.net>
 
 	* Added new file gtksourceview/gtksourceprintjob.c
